# OpenGLEngine

./: .gitignore  BPLightingShadows.frag  CMakeLists.txt  README.md  ShaderFactory.h  VideoGame.sln  VideoGame.vcxproj  VideoGame.vcxproj.filters
Debug/: VideoGame.ilk
Debug/VideoGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VideoGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
objects/characters/: basicHuman.blend  basicHuman.blend1  person.sib
objects/test/: sibenik.mtl
src/: ;  DrawObj.cpp  DrawObj.h  FBOManager.cpp  FBOManager.h  Icosphere.cpp  Icosphere.h  Light.cpp  LightManager.cpp  LightManager.h  Object.h  Scene.cpp  Scene.h  ShaderFactory.h  ShadowCubeMap.cpp  ShadowCubeMap.h  ShadowMap.cpp  ShadowMap.h  Sphere.cpp  Sphere.h  TextureManager.h  camera.cpp  camera.h  counter.h  cube.h  debug_control.cpp  debug_control.h  glHelper.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  light.h  main.cpp  mesh.h  model.cpp  model.h  model_old.h  objLoader.cpp  objLoader.h  (+13 more)
src/shaders/: BPLightingNorm.frag  BPLightingNorm.vert  basic.frag  basic.vert  basic2D.frag  basic2D.vert  blinnPhongLighting.frag  bloom2D.frag  blur2D.frag  debugTextureQuad.frag  debugTextureQuad.vert  deferred_shading.frag  depth.frag  depth.vert  directionalShadows.frag  directionalShadows.vert  ds_dlight_pass.frag  ds_plight_pass.frag  ds_plight_pass.vert  edge2D.frag  explode.geom  explode.vert  faceNormal.frag  faceNormal.vert  faceNormalLines.geom  faceNormalLines.vert  gBuffer.frag  gBuffer.vert  (+41 more)
(+12 files in other folders)
